mool/tests/compile/fail/model_duplicate_column.stderr
error: duplicate column 'value'
 --> tests/compile/fail/model_duplicate_column.rs:9:5
  |
9 |     second: i64,
  |     ^^^^^^
